# Viscacha-rs

./: Cargo.toml  Dockerfile  Example.py  README.md  dashboard.yml  docker-compose.yml  prometheus.yml
crates/api/: Cargo.toml
crates/api/assets/: index.html
crates/api/src/: auth.rs  dashboard.rs  error.rs  lib.rs  main.rs  metrics.rs  models.rs  openapi.rs  routes.rs  ui.rs
crates/api/tests/: api_tests.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  reaper.rs  space.rs  types.rs
crates/core/tests/: space_tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  event.rs  lib.rs  persistent_space.rs  replay.rs  sqlite.rs
crates/storage/tests/: storage_tests.rs
grafana/: dashboard.json
grafana/provisioning/dashboards/: dashboard.json
grafana/provisioning/datasources/: prometheus.yml
