[workspace]
members = [
    "crates/core",
    "crates/storage",
    "crates/api",
]
resolver = "2"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4"] }
tokio       = { version = "1", features = ["full"] }
thiserror   = "1"
dashmap     = "6"
parking_lot = "0.12"
rusqlite    = { version = "0.32", features = ["bundled"] }
tempfile    = "3"
axum        = "0.8"
tower       = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
