[package]
name    = "viscacha-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
viscacha-core = { path = "../core" }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
rusqlite      = { workspace = true }
uuid          = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
